feat: add about myself and education

--- a/HTML-CSS-Git-Basics/main.html
+++ b/HTML-CSS-Git-Basics/main.html
@@ -42,5 +42,19 @@
             </div>
         </div>
     </section>
-    <section class="middle__resume"></section>
+    <section class="middle__resume">
+        <div class="middle__info info">
+            <h2>Introduction</h2>
+            <p>I have one aim, it’s study and develop like front end developer. I am very fastly catching new knowledges, purposeful (try always achieve what I think), responsible and community (I like meeting different people and talk on common themes and just everything). In future I want became full stack developer and I will be hard work for it. Unfortunately, I don’t have commercial experience development, but I have several training projects and very big wish and aspiration to study. I always try improve my skills in programming and English.</p>
+        </div>
+        <div class="middle__info info">
+            <h2>Education</h2>
+            <p class="middle__name-department">Technical service and repair car</p>
+            <p class="middle__name-educational-institution">Orsky machine-building college</p>
+            <p class="middle__period">2004 - 2008</p>
+            <p class="middle__name-department">Electroenergetics and electrotechnical</p>
+            <p class="middle__name-educational-institution">National University of Science and Technology</p>
+            <p class="middle__period">2014 - 2018</p>
+        </div>
+    </section>
 </main>
